Fixed navbar collapse and implemented more mobile responsive design

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,7 +78,7 @@ html, body {
 
 $marg:32%;
 #about, #experience, #contact {
-	padding: 10px;
+	padding: 10%;
 	h1 {
 		text-align: center;
 		font-size: 50px;
@@ -111,4 +111,3 @@ $marg:32%;
 .right {
 	float:right;
 }
-
